--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.d7f3e33e.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.84bae848.js">
-    <link rel="stylesheet" href="/assets/vendor.762857ee.css">
-    <link rel="stylesheet" href="/assets/index.9ee459c1.css">
+    <script type="module" crossorigin src="./assets/index.d7f3e33e.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.84bae848.js">
+    <link rel="stylesheet" href="./assets/vendor.762857ee.css">
+    <link rel="stylesheet" href="./assets/index.9ee459c1.css">
   </head>
   <body>
     <div id="app"></div>
