--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
     <title>Vite App</title>
-    <script type="module" crossorigin src="./assets/index.d7f3e33e.js"></script>
-    <link rel="modulepreload" href="./assets/vendor.84bae848.js">
-    <link rel="stylesheet" href="./assets/vendor.762857ee.css">
+    <script type="module" crossorigin src="./assets/index.9de801e5.js"></script>
+    <link rel="modulepreload" href="./assets/chunk-vue.e8abc0df.js">
+    <link rel="modulepreload" href="./assets/chunk-vuetify.85925117.js">
+    <link rel="stylesheet" href="./assets/chunk-vuetify.8155b9fa.css">
     <link rel="stylesheet" href="./assets/index.9ee459c1.css">
   </head>
   <body>
