deploy: 728e3cb0da5be33d0c40d8077d340e384cf66e83

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
     <title>Vite App</title>
-    <script type="module" crossorigin src="./assets/index.72ab7402.js"></script>
-    <link rel="modulepreload" href="./assets/chunk-vue.e8abc0df.js">
-    <link rel="modulepreload" href="./assets/chunk-vuetify.e836cced.js">
-    <link rel="stylesheet" href="./assets/chunk-vuetify.914ec1f0.css">
+    <script type="module" crossorigin src="./assets/index.36b28e73.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.27b72966.js">
+    <link rel="stylesheet" href="./assets/vendor.e4ff7c31.css">
     <link rel="stylesheet" href="./assets/index.558e3176.css">
   </head>
   <body>
